# bce-sdk-python

./: .coveragerc  .gitignore  BCLOUD  Changelog  MANIFEST.in  README.md  README.txt  bos-coverage.xml  build.sh  ci.yml  setup.py
.github/workflows/: python-publish.yml
baidubce/: __init__.py  bce_base_client.py  bce_client_configuration.py  bce_response.py  exception.py  protocol.py  region.py  retry_policy.py  utils.py
baidubce/auth/: bce_credentials.py  bce_v1_signer.py
baidubce/http/: bce_http_client.py  handler.py  http_content_types.py  http_headers.py  http_methods.py
doc/: BMR-Python-SDK.md  BOS-Python-SDK.md  MCT-Python-SDK.md
sample/aihc/: README.md  aiak_pretrain_job_info.json  aiak_sft_job_info.json  aihc_custom_sdk.py  aihc_dataset_sample.py  aihc_devinstance_sample.py  aihc_job_sample.py  aihc_model_sample.py  aihc_resource_pool_sample.py  aihc_sample.py  aihc_sample_conf.py  aihc_service_sample.py
sample/aihc_v2/: aihc_sample.py
sample/appblb/: example_bind_app_enterprise_security_groups.py  example_bind_app_security_groups.py  example_create_app_blb_rs.py  example_create_app_http_listener.py  example_create_app_https_listener.py  example_create_app_ip_group.py  example_create_app_ip_group_member.py  example_create_app_ip_group_port.py  example_create_app_ipgroup_policys.py  example_create_app_loadbalancer.py  example_create_app_server_group.py  (+47 more)
sample/bos/mcp/: README.md  pyproject.toml
sample/bos/mcp/src/: .gitignore  client.py  mcp_conf.py
sample/bos/mcp/src/bos_mcp_server/: __init__.py  server.py
test/: .coverage
(+835 files in other folders)
